Aligning Fix.  Passing through posts fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,3 +55,8 @@ p label {
     width: 40%;
     float: left;
 }
+
+.row-fluid .no-gutter {
+  margin-left: 0;
+  margin-right: 0;
+}
